# youtube-summary-service

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  services.py
.github/workflows/: CI.yml
alembic/: env.py
alembic/versions/: 0e6e05a0db5a_initial_migration.py
src/: config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
